--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
     <head>
+		<link rel="stylesheet" type="text/css" href="/design.css"/>
     </head>         
-    <body>          
+    <body>         
         <h1>Git</h1>
         <h2>Trabalhando em Equipe com Controle e Segurança</h2>
 
